--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">Cursos na Alura</button>
+            <button class="botao ativo">Cursos na Alura</button>
             <button class="botao">Criar projetos em JavaScript</button>
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu curriculo</button>
             
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
