--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span></h2>
+        <div class="conteudo">
+
         <div class="botoes">
             <button class="botao ativo">Cursos na Alura</button>
             <button class="botao">Criar projetos em JavaScript</button>
@@ -18,9 +20,10 @@
             
         </div>
         <div class="abas-textos">
-            <div class="aba-conteudo">
+            <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                <div class="contador"></div>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
@@ -30,8 +33,13 @@
             <h3 class="aba-conteudo-titulo-principal">Criar um portfólio com os meus 3 melhores projetos</h3>
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
     </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    </div>
 
     </div>
+</div>
 
     </section>
     <script src="main.js"></script>
