--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do Ano<span>_</span></h2>
         <div class="conteudo">
 
         <div class="botoes">
@@ -25,19 +25,19 @@
  <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
  <div class="contador">
  <div class="contador-digito">
- <p class="contador-digito-numero" id="dias0">7</p>
+ <p class="contador-digito-numero" id="dias0"></p>
  <p class="contador-digito-texto">dias</p>
  </div>
  <div class="contador-digito">
- <p class="contador-digito-numero" id="horas0">7</p>
+ <p class="contador-digito-numero" id="horas0"></p>
  <p class="contador-digito-texto">horas</p>
  </div>
  <div class="contador-digito">
- <p class="contador-digito-numero" id="min0">7</p>
+ <p class="contador-digito-numero" id="min0"></p>
  <p class="contador-digito-texto">min</p>
  </div>
  <div class="contador-digito">
- <p class="contador-digito-numero" id="seg0">7</p>
+ <p class="contador-digito-numero" id="seg0"></p>
  <p class="contador-digito-texto">seg</p>
  </div>
  </div>
@@ -48,19 +48,19 @@
  <div class="contador">
 
     <div class="contador-digito">
-        <p class="contador-digito-numero" id="dias1">7</p>
+        <p class="contador-digito-numero" id="dias1"></p>
         <p class="contador-digito-texto">dias</p>
         </div>
         <div class="contador-digito">
-        <p class="contador-digito-numero" id="horas1">7</p>
+        <p class="contador-digito-numero" id="horas1"></p>
         <p class="contador-digito-texto">horas</p>
         </div>
         <div class="contador-digito">
-        <p class="contador-digito-numero" id="min1">7</p>
+        <p class="contador-digito-numero" id="min1"></p>
         <p class="contador-digito-texto">min</p>
         </div>
         <div class="contador-digito">
-        <p class="contador-digito-numero" id="seg1">7</p>
+        <p class="contador-digito-numero" id="seg1"></p>
         <p class="contador-digito-texto">seg</p>
         </div>
  </div>
@@ -70,19 +70,19 @@
             <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
             <div class="contador">
                 <div class="contador-digito">
-                    <p class="contador-digito-numero" id="dias2">7</p>
+                    <p class="contador-digito-numero" id="dias2"></p>
                     <p class="contador-digito-texto">dias</p>
                     </div>
                     <div class="contador-digito">
-                    <p class="contador-digito-numero" id="horas2">7</p>
+                    <p class="contador-digito-numero" id="horas2"></p>
                     <p class="contador-digito-texto">horas</p>
                     </div>
                     <div class="contador-digito">
-                    <p class="contador-digito-numero" id="min2">7</p>
+                    <p class="contador-digito-numero" id="min2"></p>
                     <p class="contador-digito-texto">min</p>
                     </div>
                     <div class="contador-digito">
-                    <p class="contador-digito-numero" id="seg2">7</p>
+                    <p class="contador-digito-numero" id="seg2"></p>
                     <p class="contador-digito-texto">seg</p>
                     </div>
             </div>
@@ -92,19 +92,19 @@
         <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
         <div class="contador">
             <div class="contador-digito">
-                <p class="contador-digito-numero" id="dias3">7</p>
+                <p class="contador-digito-numero" id="dias3"></p>
                 <p class="contador-digito-texto">dias</p>
                 </div>
                 <div class="contador-digito">
-                <p class="contador-digito-numero" id="horas3">7</p>
+                <p class="contador-digito-numero" id="horas3"></p>
                 <p class="contador-digito-texto">horas</p>
                 </div>
                 <div class="contador-digito">
-                <p class="contador-digito-numero" id="min3">7</p>
+                <p class="contador-digito-numero" id="min3"></p>
                 <p class="contador-digito-texto">min</p>
                 </div>
                 <div class="contador-digito">
-                <p class="contador-digito-numero" id="seg3">7</p>
+                <p class="contador-digito-numero" id="seg3"></p>
                 <p class="contador-digito-texto">seg</p>
                 </div>
         </div>
